--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,10 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
 
-/* Fonts */
+/* Fonts Arvo and Lato licensed under the SIL Open Font License v1.10 */
+/* Copyright (c) 2010-2014, Łukasz Dziedzic (dziedzic@typoland.com), with Reserved Font Name Lato. */
+/* The license is available with an FAQ at: http://scripts.sil.org/OFL */
+
 @font-face {
   font-family: "Arvo";
   src: url("../fonts/arvo-bold-webfont.woff2") format("woff2"),
@@ -48,12 +51,15 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   --heading-fonts: Arvo, Georgia, "Times New Roman", Times, serif;
   --body-fonts: Lato, Helvetica, Arial, sans-serif;
 
-  --sidebar-text: hsl(205, 100%, 96%);
-  --sidebar-bg: hsl(210, 96%, 20%);
-  --dark-overlay: hsla(0, 0%, 0%, 0.3);
+  --light-text: hsl(205, 100%, 96%);
+  --navy-bg: hsl(210, 98%, 16%);
+  --accent: hsl(0, 60%, 58%);
 }
 
 /* ---- Set defaults ---- */
+body {
+  margin: 0;
+}
 h1,
 h2,
 h3,
@@ -76,6 +82,11 @@ address {
   font-style: normal;
 }
 
+/* Link Styling */
+a:hover {
+  color: var(--accent);
+}
+
 /* ---- Sidebar ---- */
 /* Undo default browser styling for list */
 .sidebar ul {
@@ -90,21 +101,17 @@ address {
   flex-flow: column;
   top: 0;
   left: 0;
-  height: 100vh;
+  bottom: 0;
   overflow: hidden auto;
   width: var(--sidebar-width);
-  align-items: center;
+  align-items: stretch;
   text-align: center;
-  background-color: var(--sidebar-bg);
-}
-.sidebar nav {
-  /* Set width to sidebar width */
-  width: var(--sidebar-width);
+  background-color: var(--navy-bg);
 }
 /* Put main area to the side of sidebar */
-.scrolling {
-  margin-left: calc(var(--sidebar-width) + 0.3rem);
-  padding: 25px;
+main,
+footer {
+  margin-left: var(--sidebar-width);
 }
 .sidebar ul {
   /* Set font styling */
@@ -116,28 +123,50 @@ address {
   flex-flow: column;
 }
 .sidebar h1 {
-  /* Set a top margin for the heading */
+  /* Set a top margin for the heading and reset other margins */
   margin: 2.2rem 0 0 0;
   font-size: 3.6rem;
   line-height: 3.8rem;
-  color: var(--sidebar-text);
+  color: var(--light-text);
 }
 .sidebar h1::after {
   content: "";
   display: block;
   margin: 2rem auto;
   width: 130px;
-  border: 1px solid var(--sidebar-text);
-  border-radius: 0.5px;
+  border: 1px solid var(--light-text);
+  border-radius: 1px;
+}
+/* Socials List */
+.sidebar .socials {
+  display: flex;
+  flex-flow: wrap;
+  margin: auto 0.8rem 2rem 0.8rem;
+  justify-content: space-evenly;
+}
+.sidebar .socials a {
+  color: var(--light-text);
 }
 /* Button styling */
-.sidebar a {
+.sidebar nav a {
   text-decoration: none;
   /* Make link take up space horizontally */
   display: block;
   padding: 0.6rem 0;
-  color: var(--sidebar-text);
+  color: var(--light-text);
 }
-.sidebar a:hover {
-  background-color: var(--dark-overlay);
+.sidebar header a {
+  display: block;
+  text-decoration: none;
+  color: var(--light-text);
+}
+.sidebar nav a:hover {
+  background-color: var(--accent);
+}
+.sidebar .socials a {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+.sidebar .socials a:hover {
+  color: var(--accent);
 }
