Styled main content section
Added more links to music section
Added iframe to song
Added external link icon amd styled links
Changed paragraph spacing and heading sizes

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   --light-text: hsl(205, 100%, 96%);
   --navy-bg: hsl(210, 98%, 16%);
+  --light-bg: hsl(211, 18%, 46%);
   --accent: hsl(0, 60%, 58%);
 }
 
@@ -64,6 +65,7 @@ h1,
 h2,
 h3,
 h4 {
+  color: var(--navy-bg);
   font-family: var(--heading-fonts);
   font-weight: bold;
 }
@@ -71,6 +73,7 @@ p,
 ul,
 address {
   font-family: var(--body-fonts);
+  color: var(--navy-bg);
 }
 .italic {
   font-style: italic;
@@ -82,9 +85,22 @@ address {
   font-style: normal;
 }
 
-/* Link Styling */
+/* ---- Link Styling ---- */
+a {
+  color: var(--accent);
+  text-decoration: none;
+}
 a:hover {
   color: var(--accent);
+  text-decoration: underline;
+}
+a[class="external-link"]::after {
+  content: "";
+  display: inline-block;
+  background: url("../images/arrow-up-right-from-square.svg") no-repeat;
+  width: 0.62rem;
+  height: 0.62rem;
+  margin-left: 0.25rem;
 }
 
 /* ---- Sidebar ---- */
@@ -107,11 +123,6 @@ a:hover {
   align-items: stretch;
   text-align: center;
   background-color: var(--navy-bg);
-}
-/* Put main area to the side of sidebar */
-main,
-footer {
-  margin-left: var(--sidebar-width);
 }
 .sidebar ul {
   /* Set font styling */
@@ -169,4 +180,54 @@ footer {
 }
 .sidebar .socials a:hover {
   color: var(--accent);
+}
+
+/* ---- Text Styling ---- */
+
+.scrolling-content {
+  /* Put main area to the side of sidebar */
+  margin-left: var(--sidebar-width);
+}
+main {
+  padding: 1.4rem;
+}
+footer {
+  background-color: var(--light-bg);
+  /* Add a bit of padding to copyright */
+  padding: 0.4rem 1rem;
+}
+footer > p {
+  /* Set font styling for footer paragraphs */
+  text-align: center;
+  color: var(--light-text);
+  font-size: 0.7rem;
+}
+footer > p:last-child {
+  /* Remove the default bottom margin on the final p in footer */
+  margin-bottom: 0;
+}
+footer > p:first-child {
+  /* Remove the default top margin on the first p in footer */
+  margin-top: 0;
+}
+h4 {
+  margin-bottom: 0.4rem;
+}
+h4 + p {
+  margin-top: 0;
+}
+/* Make headings bigger */
+h2 {
+  font-size: 2.2rem;
+}
+h3 {
+  font-size: 1.5rem;
+}
+main > section > section > article {
+  /* Add a bottom margin to all h4 sections */
+  margin-bottom: 2.5rem;
+}
+
+#about-me p {
+  font-size: 1.2rem;
 }
