--- a/styles/main.css
+++ b/styles/main.css
@@ -46,15 +46,20 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 /* Global Variables */
 :root {
-  --sidebar-width: 17rem;
+  --sidebar-width: 280px;
 
   --heading-fonts: Arvo, Georgia, "Times New Roman", Times, serif;
   --body-fonts: Lato, Helvetica, Arial, sans-serif;
 
-  --light-text: hsl(205, 100%, 96%);
-  --navy-bg: hsl(210, 98%, 16%);
-  --light-bg: hsl(211, 18%, 46%);
+  /* Theme Colors */
+  --navy: hsl(210, 98%, 16%);
   --accent: hsl(0, 60%, 58%);
+
+  --accent-dark: hsl(0, 44%, 40%);
+  --dark-overlay: hsla(0, 0%, 0%, 0.34);
+
+  --light-text: hsl(205, 100%, 96%);
+  --light-bg: hsl(211, 18%, 46%);
 }
 
 /* ---- Set defaults ---- */
@@ -65,7 +70,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: var(--navy-bg);
+  color: var(--navy);
   font-family: var(--heading-fonts);
   font-weight: bold;
 }
@@ -73,7 +78,7 @@ p,
 ul,
 address {
   font-family: var(--body-fonts);
-  color: var(--navy-bg);
+  color: var(--navy);
 }
 .italic {
   font-style: italic;
@@ -118,11 +123,11 @@ p a[class="external-link"]::after {
   top: 0;
   left: 0;
   bottom: 0;
-  overflow: hidden auto;
+  overflow: auto;
   width: var(--sidebar-width);
   align-items: stretch;
   text-align: center;
-  background-color: var(--navy-bg);
+  background-color: var(--navy);
 }
 .sidebar ul {
   /* Set font styling */
@@ -138,14 +143,13 @@ p a[class="external-link"]::after {
   margin: 2.2rem 0 0 0;
   font-size: 3.6rem;
   line-height: 3.8rem;
-  color: var(--light-text);
 }
 .sidebar h1::after {
   content: "";
   display: block;
-  margin: 2rem auto;
+  margin: 1.2rem auto;
   width: 130px;
-  border: 1px solid var(--light-text);
+  border: 1px solid var(--accent);
   border-radius: 1px;
 }
 /* Socials List */
@@ -153,10 +157,13 @@ p a[class="external-link"]::after {
   display: flex;
   flex-flow: wrap;
   margin: auto 0.8rem 2rem 0.8rem;
+  padding-top: 0.8rem;
   justify-content: space-evenly;
 }
 .sidebar .socials a {
-  color: var(--light-text);
+  color: var(--accent);
+  width: 40px;
+  height: 40px;
 }
 /* Sidebar button styling */
 .sidebar nav a {
@@ -164,22 +171,18 @@ p a[class="external-link"]::after {
   /* Make link take up space horizontally */
   display: block;
   padding: 0.6rem 0;
-  color: var(--light-text);
+  color: var(--accent);
 }
 .sidebar header a {
   display: block;
   text-decoration: none;
-  color: var(--light-text);
+  color: var(--accent);
 }
 .sidebar nav a:hover {
-  background-color: var(--accent);
-}
-.sidebar .socials a {
-  width: 2.4rem;
-  height: 2.4rem;
+  background-color: var(--dark-overlay);
 }
 .sidebar .socials a:hover {
-  color: var(--accent);
+  color: var(--accent-dark);
 }
 
 /* ---- Text Styling ---- */
@@ -237,7 +240,7 @@ main > section > section > article {
   display: block flex;
   font-family: var(--body-fonts);
   font-size: 1.1em;
-  background-color: var(--navy-bg);
+  background-color: var(--navy);
   text-decoration: none;
   border-radius: 14px;
   color: var(--light-text);
