--- a/styles/main.css
+++ b/styles/main.css
@@ -18,8 +18,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
 
-/* Fonts Arvo and Lato licensed under the SIL Open Font License v1.10 */
-/* Copyright (c) 2010-2014, Łukasz Dziedzic (dziedzic@typoland.com), with Reserved Font Name Lato. */
+/* Lato font licensed under the SIL Open Font License v1.10 */
 /* The license is available with an FAQ at: http://scripts.sil.org/OFL */
 
 @font-face {
@@ -108,95 +107,7 @@ p a[class="external-link"]::after {
   margin-left: 0.25rem;
 }
 
-/* ---- Sidebar ---- */
-/* Undo default browser styling for list */
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-/* Make sidebar */
-.sidebar {
-  position: fixed;
-  display: flex;
-  flex-flow: column;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  overflow: auto;
-  width: var(--sidebar-width);
-  align-items: stretch;
-  text-align: center;
-  background-color: var(--navy);
-}
-.sidebar ul {
-  /* Set font styling */
-  font-family: var(--heading-fonts);
-  font-weight: bold;
-  font-size: 1.6rem;
-  /* Make the list a flexbox */
-  display: flex;
-  flex-flow: column;
-}
-.sidebar h1 {
-  /* Set a top margin for the heading and reset other margins */
-  margin: 2.2rem 0 0 0;
-  font-size: 3.6rem;
-  line-height: 3.8rem;
-}
-.sidebar h1::after {
-  content: "";
-  display: block;
-  margin: 1.2rem auto;
-  width: 130px;
-  border: 1px solid var(--accent);
-  border-radius: 1px;
-}
-/* Socials List */
-.sidebar .socials {
-  display: flex;
-  flex-flow: wrap;
-  margin: auto 0.8rem 2rem 0.8rem;
-  padding-top: 0.8rem;
-  justify-content: space-evenly;
-}
-.sidebar .socials a {
-  color: var(--accent);
-  width: 40px;
-  height: 40px;
-}
-/* Sidebar button styling */
-.sidebar nav a {
-  text-decoration: none;
-  /* Make link take up space horizontally */
-  display: block;
-  padding: 0.6rem 0;
-  color: var(--accent);
-}
-.sidebar header a {
-  display: block;
-  text-decoration: none;
-  color: var(--accent);
-}
-.sidebar nav a:hover {
-  background-color: var(--dark-overlay);
-}
-.sidebar nav a:active {
-  color: var(--light-text);
-}
-.sidebar .socials a:hover {
-  color: var(--accent-dark);
-}
-.sidebar .socials a:active {
-  color: var(--light-text);
-}
-
 /* ---- Text Styling ---- */
-
-.scrolling-content {
-  /* Put main area to the side of sidebar */
-  margin-left: var(--sidebar-width);
-}
 main {
   padding: 1.4rem;
 }
