--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -28,14 +28,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 }
 /* Make sidebar */
 .sidebar {
-  position: fixed;
   display: flex;
   flex-flow: column;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   overflow: auto;
-  z-index: 1; /* Keep sidebar on top */
+  z-index: 2; /* Keep sidebar on top */
   width: var(--sidebar-width);
   align-items: stretch;
   text-align: center;
@@ -53,27 +53,32 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 }
 .sidebar h1 {
   /* Set a top margin for the heading and reset other margins */
-  margin: 2.2rem 0 0 0;
+  margin: 0;
   font-size: 3.6rem;
   line-height: 3.8rem;
 }
-.sidebar h1::after {
-  content: "";
-  display: block;
-  margin: 1.2rem auto;
-  width: 130px;
-  border: 1px solid var(--accent);
-  border-radius: 1px;
+.sidebar header {
+  margin-top: 2.2rem;
+}
+@media (min-width: 768px) {
+  .sidebar h1::after {
+    content: "";
+    display: block;
+    margin: 1.2rem auto;
+    width: 130px;
+    border: 1px solid var(--accent);
+    border-radius: 1px;
+  }
 }
 /* Socials List */
-.sidebar .socials {
+.socials {
   display: flex;
   flex-flow: wrap;
   margin: auto 0.8rem 2rem 0.8rem;
   padding-top: 0.8rem;
   justify-content: space-evenly;
 }
-.sidebar .socials a {
+.socials a {
   color: var(--accent);
   width: 40px;
   height: 40px;
@@ -89,7 +94,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 .sidebar header a {
   display: block;
   text-decoration: none;
+}
+.logo {
   color: var(--accent);
+  width: 210px;
 }
 @media (hover: hover) {
   .sidebar nav a:hover {
@@ -98,10 +106,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   .sidebar nav a:active {
     color: var(--light-text);
   }
-  .sidebar .socials a:hover {
+  .socials a:hover {
     color: var(--accent-dark);
   }
-  .sidebar .socials a:active {
+  .socials a:active {
     color: var(--light-text);
   }
 }
