--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -21,13 +21,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 /* Sidebar Stylesheet */
 
 /* Undo default browser styling for list */
-.sidebar ul {
+#sidebar ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 /* Make sidebar */
-.sidebar {
+#sidebar {
   display: flex;
   flex-flow: column;
   position: fixed;
@@ -35,14 +35,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   left: 0;
   bottom: 0;
   overflow: auto;
-  z-index: 2; /* Keep sidebar on top */
+  z-index: 2; /* Keep sidebar on top, even above mobile header */
   width: var(--sidebar-width);
   align-items: stretch;
   text-align: center;
   background-color: var(--navy);
   transition: margin-left 0.4s;
 }
-.sidebar ul {
+#sidebar ul {
   /* Set font styling */
   font-family: var(--heading-fonts);
   font-weight: bold;
@@ -51,17 +51,17 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   display: flex;
   flex-flow: column;
 }
-.sidebar h1 {
-  /* Set a top margin for the heading and reset other margins */
+#sidebar h1 {
+  /* Reset default margins */
   margin: 0;
   font-size: 3.6rem;
   line-height: 3.8rem;
 }
-.sidebar header {
+#header-desktop {
   margin-top: 2.2rem;
 }
-@media (min-width: 768px) {
-  .sidebar h1::after {
+@media (min-width: 769px) {
+  #sidebar h1::after {
     content: "";
     display: block;
     margin: 1.2rem auto;
@@ -71,50 +71,51 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   }
 }
 /* Socials List */
-.socials {
+#socials {
   display: flex;
   flex-flow: wrap;
   margin: auto 0.8rem 2rem 0.8rem;
   padding-top: 0.8rem;
   justify-content: space-evenly;
 }
-.socials a {
+#socials a {
   color: var(--accent);
   width: 40px;
   height: 40px;
 }
 /* Sidebar button styling */
-.sidebar nav a {
+#sidebar nav a {
   text-decoration: none;
   /* Make link take up space horizontally */
   display: block;
   padding: 0.6rem 0;
   color: var(--accent);
 }
-.sidebar header a {
+#header-desktop a {
   display: block;
   text-decoration: none;
 }
-.logo {
+#header-desktop svg {
   color: var(--accent);
+}
+#header-desktop svg {
   width: 210px;
 }
 @media (hover: hover) {
-  .sidebar nav a:hover {
+  #sidebar nav a:hover {
     background-color: var(--dark-overlay);
   }
-  .sidebar nav a:active {
+  #sidebar nav a:active {
     color: var(--light-text);
   }
-  .socials a:hover {
+  #socials a:hover {
     color: var(--accent-dark);
   }
-  .socials a:active {
+  #socials a:active {
     color: var(--light-text);
   }
 }
-.scrolling-content {
+#scrolling-content {
   /* Put main area to the side of sidebar */
   margin-left: var(--sidebar-width);
-  transition: margin-left 0.4s;
 }
