--- a/styles/main.css
+++ b/styles/main.css
@@ -61,6 +61,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   --light-text: hsl(205, 100%, 96%);
   --light-bg: hsl(211, 18%, 46%);
+
+  scroll-behavior: smooth; /* Here for specificity's sake */
 }
 
 /* ---- Set defaults ---- */
@@ -122,6 +124,7 @@ h4 + p {
 /* Make headings bigger */
 h2 {
   font-size: 2.2rem;
+  margin-top: 1.5rem;
 }
 h3 {
   font-size: 1.5rem;
@@ -129,9 +132,6 @@ h3 {
 article {
   /* Add a bottom margin to all articles */
   margin-bottom: 2.5rem;
-}
-main {
-  padding: 0.4rem 1.2rem;
 }
 
 /* ---- Button styling in main content section ---- */
@@ -171,4 +171,8 @@ footer > p:last-child {
 footer > p:first-child {
   /* Remove the default top margin on the first p in footer */
   margin-top: 0;
+}
+
+main {
+  padding: 0 1rem;
 }
