--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -45,6 +45,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   /* Reset default h1 margins */
   margin: 0;
 }
+.header-mobile svg,
+.header-desktop svg {
+  color: var(--white);
+}
 .sidebar ul {
   /* Undo default browser styling for list */
   list-style: none;
@@ -54,38 +58,49 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 /* Socials List */
 .socials {
+  margin: auto 1rem 1rem 1rem;
+}
+.socials ul {
   display: flex;
   flex-flow: wrap;
-  margin: auto 0.8rem 2rem 0.8rem;
-  padding-top: 0.8rem;
   justify-content: center;
-  gap: 1.3rem;
+  gap: 1.2rem;
 }
 .socials a {
-  color: var(--accent);
-  width: 40px;
-  height: 40px;
+  color: var(--white);
 }
 
-/* Sidebar button styling */
+/* Sidebar nav button styling */
 .sidebar nav a {
   text-decoration: none;
   /* Make link take up space horizontally */
   display: block;
   padding: 0.6rem 0;
-  color: var(--accent);
+  color: var(--white);
 }
-.sidebar nav a:hover {
-  background-color: var(--dark-overlay);
-}
-.sidebar nav a:active {
-  color: var(--light-text);
-}
-.socials a:hover {
-  color: var(--accent-dark);
-}
-.socials a:active {
-  color: var(--light-text);
+
+@media (hover: hover) {
+  .sidebar nav a:hover {
+    background: hsla(0, 0%, 0%, 0.32);
+    color: var(--accent);
+  }
+  .sidebar nav a:active {
+    background: var(--accent-dark);
+  }
+  .socials a:hover {
+    color: var(--accent);
+  }
+  .socials a:active {
+    color: var(--accent-dark);
+  }
+  .header-mobile svg:hover,
+  .header-desktop svg:hover {
+    color: var(--accent);
+  }
+  .header-mobile svg:active,
+  .header-desktop svg:active {
+    color: var(--accent-dark);
+  }
 }
 
 /* ---- Desktop Version ---- */
@@ -95,7 +110,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   }
   .sidebar {
     width: var(--sidebar-width);
-    background-color: var(--navy);
+    background: var(--navy-dark);
     left: 0;
   }
   .scrolling-content {
@@ -109,16 +124,16 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     display: block;
     text-decoration: none;
   }
-  .header-desktop svg {
-    color: var(--accent);
+  .header-desktop h1 {
     width: 210px;
+    margin: 0 auto;
   }
   .header-desktop::after {
     content: "";
     display: block;
     margin: 1.2rem auto;
     width: 130px;
-    border: 1px solid var(--accent);
+    border: 1px solid var(--white);
     border-radius: 1px;
   }
 }
@@ -142,7 +157,7 @@ ID is used here to increase specificity */
     width: 100vw;
     top: var(--mobile-header-height);
     border-top: 1px solid hsl(220, 36%, 35%);
-    background: var(--navy-transparent);
+    background: var(--navy-dark-transparent);
     left: -100vw;
   }
   .sidebar ul {
@@ -156,21 +171,18 @@ ID is used here to increase specificity */
     top: 0;
     width: 100vw;
     z-index: 1; /* Show above other content */
-    background: var(--navy);
+    background: var(--navy-dark);
     height: var(--mobile-header-height);
   }
   .header-mobile h1 svg {
     width: 80px;
-    color: var(--accent);
-  }
-  .menu-button svg {
-    color: var(--accent);
   }
   .menu-button-icon {
     width: calc(var(--mobile-header-height) - 15px);
     height: calc(var(--mobile-header-height) - 15px);
   }
   .x-icon {
+    height: calc(var(--mobile-header-height) - 5px);
     display: none;
   }
   .menu-button {
@@ -178,12 +190,6 @@ ID is used here to increase specificity */
     background-color: transparent;
     position: absolute;
     left: 0;
-  }
-  .menu-button svg:hover {
-    color: var(--accent-dark);
-  }
-  .menu-button svg:active {
-    color: var(--light-text);
   }
 
   .scrolling-content {
