--- a/styles/main.css
+++ b/styles/main.css
@@ -54,12 +54,12 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   /* Theme Colors */
   --navy: hsl(210, 98%, 16%);
   --accent: hsl(0, 100%, 70%);
-  --white: hsl(219, 37%, 93%);
+  --white: hsl(210, 100%, 97%);
 
-  --navy-dark: hsl(208, 100%, 11%);
+  --navy-dark: hsl(208, 100%, 10%);
   --navy-medium: hsl(210, 100%, 18%);
-  --navy-light: hsl(210, 78%, 27%);
-  --navy-dark-transparent: hsla(210, 98%, 11%, 0.94);
+  --navy-light: hsl(210, 100%, 26%);
+  --navy-dark-transparent: hsla(211, 96%, 11%, 0.94);
 
   --accent-medium: hsl(0, 66%, 61%);
   --accent-dark: hsl(0, 44%, 38%);
@@ -69,14 +69,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 /* ---- Set defaults ---- */
 body {
-  background: var(--navy-medium);
+  background: var(--navy);
   text-align: center;
   margin: 0;
 }
 h1,
 h2,
-h3,
-h4 {
+h3 {
   color: var(--white);
   font-family: var(--heading-fonts);
   font-weight: bold;
@@ -84,8 +83,7 @@ h4 {
 h1 {
   margin: 0;
 }
-p,
-ul {
+p {
   color: var(--white);
   font-family: var(--body-fonts);
 }
@@ -99,10 +97,11 @@ abbr {
 /* Make headings bigger */
 h2 {
   font-size: 2.2rem;
-  margin-top: 1.5rem;
+  margin: 0 0 1.2rem 0;
 }
 h3 {
-  font-size: 1.5rem;
+  margin: 0 0 12px 0;
+  font-size: 1.3rem;
 }
 
 /* ---- Footer ---- */
@@ -133,29 +132,48 @@ footer > p:first-child {
 main {
   flex: 1; /* Pushes footer to bottom */
   padding: 0 1rem;
-  margin-bottom: 3rem;
+  margin-top: 2rem;
+}
+main section {
+  margin-bottom: 4rem;
 }
 
 /* Main Page Portfolio */
 .portfolio-grid {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 28px;
   flex-flow: row wrap;
 }
 .portfolio-grid article {
   width: 250px;
   min-height: 180px;
-  padding: 10px;
-  background: linear-gradient(var(--navy-light), var(--navy));
-  border: 1.5px solid var(--navy);
-  border-radius: 15px;
-  box-shadow: hsla(0, 0%, 0%, 0.2) 0 1px 3px, hsla(0, 0%, 0%, 0.16) 0 8px 8px;
+  padding: 18px;
+  background: linear-gradient(var(--navy-light), var(--navy-medium));
+  border-radius: 24px;
+  border: 1px solid var(--navy);
+  box-shadow: hsla(0, 0%, 0%, 0.1) 0 1px 3px, hsla(0, 0%, 0%, 0.12) 0 8px 8px;
+  transition: box-shadow 0.2s, transform 0.2s, border 0.15s,
+    background-color 0.14s;
 }
 .portfolio-grid article p,
 .portfolio-grid article h4 {
   margin: 0; /* Cut default margin */
 }
+.portfolio-grid article p {
+  margin-top: 10px;
+}
+.portfolio-grid article h4 {
+  margin-bottom: 10px;
+}
 .portfolio-grid img {
-  border-radius: 12px;
+  border-radius: 20px;
+}
+@media (hover: hover) {
+  .portfolio-grid article:hover {
+    transform: scale(1.06);
+    box-shadow: var(--accent) 0 2px 10px;
+    border: 1px solid var(--accent);
+    background: var(--accent-dark);
+  }
 }
